# DAWvid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.yml  release.yml
.github/workflows/: build.yml  release.yml
altmethod/dawvid_electron-controllerjs-method/: README.md
altmethod/dawvid_electron-controllerjs-method/app/: main.js  package-lock.json  package.json
altmethod/dawvid_electron-controllerjs-method/app/renderer/: index.html  player.js  preload.js
altmethod/dawvid_electron-controllerjs-method/controller/: DAWvid.control.js
bitwig/: DAWvid.control.js
cmake/: Info.plist.in  dist.cmake
img/: DAWvid_screenshot.psd
include/: gl_renderer.h  gui_window.h  ipc_bridge.h  plugin_info.h  transport_sync.h  video_decoder.h  video_player_plugin.h
installer/: INSTALL-README.txt  install.bat  install.ps1
src/: gl_renderer.cpp  gui_window.cpp  ipc_bridge.cpp  plugin_entry.cpp  transport_sync.cpp  video_decoder.cpp  video_player_plugin.cpp
